# block-painting-helper

./: .#todo.txt  .gitignore  README.md  hd_pro_webcam_c920.yaml  mocknav.py  todo.txt  turtlebot_bringup.launch.py
block-painting-helper/: LICENSE  README.md  package.xml  readme.txt  setup.cfg  setup.py
block-painting-helper/nav_to_goal/: package.xml  setup.py
block-painting-helper/nav_to_goal/config/: slam_params.yaml
block-painting-helper/nav_to_goal/nav_to_goal/: __init__.py  navigator_node.py
bph-navigation/: CMakeLists.txt  package.xml
bph-navigation/bph-navigation/: simplenavigator.py
bph-perception.py/: CMakeLists.txt
bph_UI/: springcontroller_gui.html
bph_interfaces/: CMakeLists.txt  package.xml
bph_interfaces/action/: BphPickmeup.action
bph_interfaces/srv/: GetTargetPose.srv  GoToLocation.srv  SetTargetColor.srv
bph_perception/: CMakeLists.txt  README.txt  package.xml  setup.cfg  setup.py
bph_perception/bph_perception/: bph_perception.py  color_picker_node.py
bph_pickmeup/: CMakeLists.txt  package.xml  readme.txt  setup.cfg  setup.py
bph_pickmeup/bph_pickmeup/: __init__.py  bph_pickmeup.py  bph_pickmeup_action_server.py  bph_pickmeup_client.py  move_to_position.py
bph_pickmeup/scripts/: bph_pickmeup_node  test_move_to_pose
bph_pickmeup_msgs/: CMakeLists.txt
bph_pickmeup_msgs/srv/: MoveToPose.srv
bph_statemachine/: README.txt  README.txt~  bph-statemachine.py  demo-plan.txt  howitworks.txt  package.xml  setup.cfg  setup.py  state_machine.dot
bph_statemachine/bph_statemachine/: #simplified_sm.py#  arm_sm.py  bph-statemachine.py  bph_statemachine.py  mobile_base_sm.py  simplified_sm.py
bph_statemachine/launch/: arm.launch.py  demo.launch.py  fakenavdemo.launch.py
bph_test/: test_base_sm.py
bph_userinterface/: README.txt  bph_ui_server.py  demo_controller.html  humanrequest.html  index.html
hayley-nav2/: nav2_params.yaml
nav_to_goal/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
nav_to_goal/config/: nav2_params.yaml
nav_to_goal/launch/: bringup.launch.py
nav_to_goal/nav_to_goal/: #navigator_node.py#  .#navigator_node.py  navigator_node.py  turtlebot_bridge.py
person_tracker/: README.md  package.xml  setup.cfg  setup.py
person_tracker/config/: params.yaml
person_tracker/launch/: person_tracker.launch.py
person_tracker/person_tracker/: person_tracker_node.py  topdown_viz_node.py  topdown_viz_node.py~
