<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>block-painting-helper</name>
  <version>0.0.0</version>
  <description>Multimodal helper for block painting</description>
  <maintainer email="katallen@gmail.com">Kat Allen</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_mypy</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>
  <depend>springcontroller</depend>
  <depend>block-painting-interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
