<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bph_pickmeup</name>
  <version>0.0.0</version>
  <description>MoveIt2-based move-to-pose service for one or more robot arms</description>
  <maintainer email="katallen@gmail.com">Kat Allen</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_py</depend>
  <depend>shape_msgs</depend>
  <depend>bph_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
