<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bph_statemachine</name>
  <version>0.0.1</version>
  <description>A SMACH state machine for block-painting-helper</description>
  <maintainer email="kat.allen@tufts.edu">Kat Allen </maintainer>
  <license>Apache-2.0</license>
 
  <exec_depend>rclpy</exec_depend>
  <exec_depend>smach</exec_depend>
  <exec_depend>smach_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>
   <depend>bph_interfaces</depend>
 
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
 
  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>