<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>person_tracker</name>
  <version>0.1.0</version>
  <description>
    ROS2 node for real-time person detection and tracking using YOLOv8-pose,
    intended for robot arm collision avoidance.
  </description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_pep8</test_depend>
  <test_depend>ament_copyright</test_depend>
  <depend>bph_interfaces</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
